deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-tools-portal
  namespace: dev-tools-portal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - david-pjetraj.shop
      secretName: dev-tools-portal-tls
  rules:
    - host: david-pjetraj.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /v1/health
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
